style: fix position on mobile view

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -964,6 +964,13 @@ footer p {
     width: 160px;
   }
 
+  .clear-search {
+    right: 4px;
+    top: 8px;
+    padding: 0.1rem;
+    font-size: 0.8rem;
+  }
+
   th, td, .level-btn, .badge {
     padding: 0.5rem;
     font-size: 0.85rem;
